<resources>
    <string name="app_name">ShoppingList</string>

    <string name="label_name">Name</string>
    <string name="label_quantity">Quantity (optional)</string>
    <string name="label_add_new_item">Add new item</string>
    <string name="label_icon">Icon:</string>
    <string name="label_click_to_add_shop">Click here to add the first one!</string>
    <string name="label_no_shops">You don\'t have any shops…</string>
    <string name="label_color">Color (optional):</string>
    <string name="label_items_number">%d items</string>
    <string name="label_show_completed">Show completed</string>
    <string name="label_remove_list">Remove list</string>
    <string name="label_remove_item">Remove item</string>
    <string name="label_add_new_shop">Add new shop</string>

    <string name="argument_shop_id">shopId</string>

    <string name="error_empty_name">Name should not be empty!</string>
    <string name="error_shop_exists">Shop already present</string>
    <string name="label_are_you_sure">Are you really want to remove this shopping list?</string>
    <string name="label_my_shops">My shops</string>

</resources>
