<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/peek"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/label_add_new"
        android:layout_width="match_parent"
        android:layout_height="@dimen/peek"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:gravity="center"
        android:text="@string/label_add_new_item"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Inverse" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_item_name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginLarge"
        android:layout_marginEnd="@dimen/marginLarge"
        android:hint="@string/label_name"
        app:layout_constraintEnd_toStartOf="@id/add_new"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_add_new">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textAutoCorrect"
            tools:targetApi="o" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_item_quantity_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginLarge"
        android:hint="@string/label_quantity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/new_item_name_layout"
        app:layout_constraintTop_toBottomOf="@id/new_item_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:targetApi="o" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginLarge"
        android:src="@drawable/ic_add_shopping_cart_white_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

