<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@android:color/white"
        app:layout_behavior="@string/bottom_sheet_behavior"
        android:layout_width="match_parent"
        app:behavior_hideable="false"
        android:id="@+id/bottom_sheet"
        app:behavior_peekHeight="@dimen/peek"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
            android:elevation="4dp"
            android:id="@+id/label_add_new"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Inverse"
            android:gravity="center"
            android:text="@string/label_add_new_item"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/peek"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_item_name_layout"
            android:layout_marginStart="@dimen/margin"
            android:hint="@string/label_name"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/margin"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_item_name"
                tools:targetApi="o"
                android:inputType="textAutoCorrect"
                android:importantForAutofill="no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_item_quantity_layout"
                android:layout_marginBottom="@dimen/margin"
                android:hint="@string/label_quantity"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_item_quantity"
                    android:layout_width="wrap_content"
                    android:ems="8"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    tools:targetApi="o"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <Button
                android:text="+"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_margin="@dimen/margin"
            android:id="@+id/add_new"
            android:layout_gravity="end"
            android:src="@drawable/ic_add_shopping_cart_white_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>

